--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#131033" />
     <meta name="msapplication-TileColor" content="#131033">
-    <meta name="description" content="Community driven RChain wallet" />
+    <meta name="description" content="Community driven REV wallet" />
 
     <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon.png?v=2">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
